fix message state z-index

--- a/client/src/components/css/MessageState.css
+++ b/client/src/components/css/MessageState.css
@@ -11,7 +11,7 @@
 .alertify-notifier .notification {
   margin-bottom: 5px;
   margin-right: 3px;
-  z-index: -1 !important;
+  z-index: 1000;
 }
 
 .alertify-notifier .hasSucceed {
